--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">dice-roller</string>
+    <string name="app_name">Dice Roller</string>
     <string name="roll">Roll</string>
 </resources>
